--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,9 +1,10 @@
 {
-    "address": "192.168.4.1",
+    "address": "/dev/ttyUSB0",
     "username": "micro",
     "password": "python",
     "sync_folder": "src",
-    "open_on_start": true,
+    "open_on_start": false,
+    "auto_connect": false,
     "safe_boot_on_upload": false,
     "py_ignore": [
         "pymakr.conf",
