--- a/native/platformio.ini
+++ b/native/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+upload_protocol = espota
+upload_port = 192.168.178.26
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.7.13
 	knolleary/PubSubClient@^2.8
