--- a/native/platformio.ini
+++ b/native/platformio.ini
@@ -17,3 +17,4 @@ upload_port = 192.168.178.26
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.7.13
 	knolleary/PubSubClient@^2.8
+	milesburton/DallasTemperature@^3.9.1
