improve build size

--- a/native/platformio.ini
+++ b/native/platformio.ini
@@ -18,3 +18,6 @@ lib_deps =
 	crankyoldgit/IRremoteESP8266@^2.7.13
 	knolleary/PubSubClient@^2.8
 	milesburton/DallasTemperature@^3.9.1
+build_flags = -D_IR_ENABLE_DEFAULT_=false
+              -DDECODE_NEC=true
+              -DSEND_NEC=true
