--- a/native/platformio.ini
+++ b/native/platformio.ini
@@ -12,12 +12,11 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-upload_protocol = espota
-upload_port = 192.168.178.26
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.7.13
 	knolleary/PubSubClient@^2.8
 	milesburton/DallasTemperature@^3.9.1
+	erropix/ESP32 AnalogWrite@^0.2
 build_flags = -D_IR_ENABLE_DEFAULT_=false
-              -DDECODE_NEC=true
-              -DSEND_NEC=true
+	-DDECODE_NEC=true
+	-DSEND_NEC=true
