fix build issues after update to latest framework and lib versions (also pinned current working versions)

--- a/native/platformio.ini
+++ b/native/platformio.ini
@@ -9,14 +9,23 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32doit-devkit-v1]
-platform = espressif32
+; find latest platform release under: https://github.com/platformio/platform-espressif32/releases
+platform = espressif32@6.9.0
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = 
-	crankyoldgit/IRremoteESP8266@^2.7.13
-	knolleary/PubSubClient@^2.8
-	milesburton/DallasTemperature@^3.9.1
-	erropix/ESP32 AnalogWrite@^0.2
-build_flags = -D_IR_ENABLE_DEFAULT_=false
+monitor_speed = 115200	
+build_flags = 
+	-D_IR_ENABLE_DEFAULT_=false
 	-DDECODE_NEC=true
 	-DSEND_NEC=true
+
+lib_deps = 
+	; see: https://github.com/crankyoldgit/IRremoteESP8266/releases
+	crankyoldgit/IRremoteESP8266@2.8.6
+
+	; see: https://github.com/knolleary/pubsubclient/releases
+	knolleary/PubSubClient@2.8
+	
+	; see: https://github.com/milesburton/Arduino-Temperature-Control-Library/releases
+	; WARN: heap error loop when enabled in main.cpp
+	milesburton/DallasTemperature@3.9.1
